--- a/template/index.html
+++ b/template/index.html
@@ -19,13 +19,60 @@
         </header>
 
         <main class="main">
-            <ul>
-                <li> Product 1 </li>
-                <li> Product 2 </li>
-                <li> Product 3 </li>
-                <li> Product 4 </li>
-                <li> Product 5 </li>
-            </ul>
+            <div class="content">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <img src="images/d1.jpg" class="product-image" alt="product">
+                                <div class="product-name">
+                                     <a href="product.html">Slim Shirt </a> 
+                                     </div>
+                                <div class="product-brand"> Nike </div>
+                                <div class="product-price"> $60 </div>
+                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <img src="images/d1.jpg" class="product-image" alt="product">
+                                <div class="product-name">
+                                     <a href="product.html">Slim Shirt </a> 
+                                     </div>
+                                <div class="product-brand"> Nike </div>
+                                <div class="product-price"> $60 </div>
+                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <img src="images/d1.jpg" class="product-image" alt="product">
+                                <div class="product-name">
+                                     <a href="product.html">Slim Shirt </a> 
+                                     </div>
+                                <div class="product-brand"> Nike </div>
+                                <div class="product-price"> $60 </div>
+                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <img src="images/d1.jpg" class="product-image" alt="product">
+                                <div class="product-name">
+                                     <a href="product.html">Slim Shirt </a> 
+                                     </div>
+                                <div class="product-brand"> Nike </div>
+                                <div class="product-price"> $60 </div>
+                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
+                        </div>
+                    </li>
+    
+                </ul>
+
+            </div>
+
         </main>
         <footer class="footer">
             All right reserved
