--- a/template/index.html
+++ b/template/index.html
@@ -10,6 +10,7 @@
     <div class="grid-container">
         <header class="header">
             <div class="brand">
+                <button onclick="openMenu()"> &#9776; </button>
                 <a href="index.html"> amazona </a>
             </div>
             <div class="header-links">
@@ -17,6 +18,16 @@
                 <a href="signin.html"> Sign In</a>
             </div>
         </header>
+
+        <aside class="sidebar">
+            <h3> Shopping Categories</h3>
+            <button class="sidebar-close-button" onclick="closeMenu()"> X </button>
+            <ul>
+                <li> <a href="index.html"> Pants </a> </li>
+                <li> <a href="index.html"> Shirts </a> </li>
+            </ul>
+
+        </aside>
 
         <main class="main">
             <div class="content">
@@ -79,5 +90,13 @@
         </footer>
     </div>
     
+    <script>
+        function openMenu(){
+            document.querySelector(".sidebar").classList.add("open");
+        }
+        function closeMenu(){
+            document.querySelector(".sidebar").classList.remove("open");
+        }
+    </script>
 </body>
 </html>
