--- a/template/index.html
+++ b/template/index.html
@@ -1,102 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Amazona</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="grid-container">
-        <header class="header">
-            <div class="brand">
-                <button onclick="openMenu()"> &#9776; </button>
-                <a href="index.html"> amazona </a>
-            </div>
-            <div class="header-links">
-                <a href="cart.html"> Cart</a>
-                <a href="signin.html"> Sign In</a>
-            </div>
-        </header>
+      <header class="header">
+        <div class="brand">
+          <button onclick="openMenu()">&#9776;</button>
+          <a href="index.html"> amazona </a>
+        </div>
+        <div class="header-links">
+          <a href="cart.html"> Cart</a>
+          <a href="signin.html"> Sign In</a>
+        </div>
+      </header>
 
-        <aside class="sidebar">
-            <h3> Shopping Categories</h3>
-            <button class="sidebar-close-button" onclick="closeMenu()"> X </button>
-            <ul>
-                <li> <a href="index.html"> Pants </a> </li>
-                <li> <a href="index.html"> Shirts </a> </li>
-            </ul>
+      <aside class="sidebar">
+        <h3>Shopping Categories</h3>
+        <button class="sidebar-close-button" onclick="closeMenu()">X</button>
+        <ul>
+          <li><a href="index.html"> Pants </a></li>
+          <li><a href="index.html"> Shirts </a></li>
+        </ul>
+      </aside>
 
-        </aside>
+      <main class="main">
+        <div class="content">
+          <ul class="products">
+            <li>
+              <div class="product">
+                <img src="images/d1.jpg" class="product-image" alt="product" />
+                <div class="product-name">
+                  <a href="product.html">Slim Shirt </a>
+                </div>
+                <div class="product-brand">Nike</div>
+                <div class="product-price">$60</div>
+                <div class="product-rating">4.5 stars (2 reviews)</div>
+              </div>
+            </li>
 
-        <main class="main">
-            <div class="content">
-                <ul class="products">
-                    <li>
-                        <div class="product">
-                            <img src="images/d1.jpg" class="product-image" alt="product">
-                                <div class="product-name">
-                                     <a href="product.html">Slim Shirt </a> 
-                                     </div>
-                                <div class="product-brand"> Nike </div>
-                                <div class="product-price"> $60 </div>
-                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
-                        </div>
-                    </li>
+            <li>
+              <div class="product">
+                <img src="images/d1.jpg" class="product-image" alt="product" />
+                <div class="product-name">
+                  <a href="product.html">Slim Shirt </a>
+                </div>
+                <div class="product-brand">Nike</div>
+                <div class="product-price">$60</div>
+                <div class="product-rating">4.5 stars (2 reviews)</div>
+              </div>
+            </li>
 
-                    <li>
-                        <div class="product">
-                            <img src="images/d1.jpg" class="product-image" alt="product">
-                                <div class="product-name">
-                                     <a href="product.html">Slim Shirt </a> 
-                                     </div>
-                                <div class="product-brand"> Nike </div>
-                                <div class="product-price"> $60 </div>
-                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
-                        </div>
-                    </li>
+            <li>
+              <div class="product">
+                <img src="images/d1.jpg" class="product-image" alt="product" />
+                <div class="product-name">
+                  <a href="product.html">Slim Shirt </a>
+                </div>
+                <div class="product-brand">Nike</div>
+                <div class="product-price">$60</div>
+                <div class="product-rating">4.5 stars (2 reviews)</div>
+              </div>
+            </li>
 
-                    <li>
-                        <div class="product">
-                            <img src="images/d1.jpg" class="product-image" alt="product">
-                                <div class="product-name">
-                                     <a href="product.html">Slim Shirt </a> 
-                                     </div>
-                                <div class="product-brand"> Nike </div>
-                                <div class="product-price"> $60 </div>
-                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="product">
-                            <img src="images/d1.jpg" class="product-image" alt="product">
-                                <div class="product-name">
-                                     <a href="product.html">Slim Shirt </a> 
-                                     </div>
-                                <div class="product-brand"> Nike </div>
-                                <div class="product-price"> $60 </div>
-                                <div class="product-rating"> 4.5 stars (2 reviews) </div>
-                        </div>
-                    </li>
-    
-                </ul>
-
-            </div>
-
-        </main>
-        <footer class="footer">
-            All right reserved
-        </footer>
+            <li>
+              <div class="product">
+                <img src="images/d1.jpg" class="product-image" alt="product" />
+                <div class="product-name">
+                  <a href="product.html">Slim Shirt </a>
+                </div>
+                <div class="product-brand">Nike</div>
+                <div class="product-price">$60</div>
+                <div class="product-rating">4.5 stars (2 reviews)</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </main>
+      <footer class="footer">
+        All right reserved
+      </footer>
     </div>
-    
+
     <script>
-        function openMenu(){
-            document.querySelector(".sidebar").classList.add("open");
-        }
-        function closeMenu(){
-            document.querySelector(".sidebar").classList.remove("open");
-        }
+      function openMenu() {
+        document.querySelector(".sidebar").classList.add("open");
+      }
+      function closeMenu() {
+        document.querySelector(".sidebar").classList.remove("open");
+      }
     </script>
-</body>
+  </body>
 </html>
