--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,32 +1,36 @@
-html{
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-body{
+body {
   font: 1.6rem Helvetica;
   height: 100vh;
   margin: 0;
 }
 
-.grid-container{
+#root {
+  height: 100%;
+}
+
+.grid-container {
   display: grid;
   grid-template-areas:
-  "header"
-  "main"
-  "footer" ;
+    "header"
+    "main"
+    "footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
 
-.header{
+.header {
   grid-area: header;
   background-color: #203040;
   color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 .brand a {
@@ -42,10 +46,10 @@ body{
 .header-links a:hover {
   color: #ff8000;
 }
-.main{
+.main {
   grid-area: main;
 }
-.footer{
+.footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
@@ -54,31 +58,30 @@ body{
   align-items: center;
 }
 
-a{
+a {
   text-decoration: none;
-
 }
-a:hover{
+a:hover {
   color: #ff8000;
 }
 
 /* Home screen */
-.products{
+.products {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.products li{
+.products li {
   list-style-type: none;
   padding: 0;
   flex: 0 1 34rem;
   margin: 1rem;
   height: 50rem;
-  border-bottom: .1rem #c0c0c0 solid;
+  border-bottom: 0.1rem #c0c0c0 solid;
 }
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -92,16 +95,16 @@ a:hover{
   font-size: 1.2rem;
   color: #808080;
 }
-.product-price{
+.product-price {
   font-size: 2rem;
   font-weight: bold;
 }
 
-.product-image{
+.product-image {
   max-width: 34rem;
   max-height: 34rem;
 }
-.product-rating{
+.product-rating {
   margin-bottom: 1rem;
 }
 
@@ -109,7 +112,7 @@ a:hover{
 
 .brand button {
   font-size: 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   background: none;
   border: none;
   color: #ffffff;
@@ -118,7 +121,7 @@ a:hover{
 
 .sidebar {
   position: fixed;
-  transition: all .5s;
+  transition: all 0.5s;
   transform: translateX(-30rem);
   width: 30rem;
   background-color: #f0f0f0;
@@ -131,13 +134,74 @@ a:hover{
 
 .sidebar-close-button {
   border-radius: 50%;
-  border: .1rem #000000 solid;
+  border: 0.1rem #000000 solid;
   width: 3rem;
   height: 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 2rem;
   cursor: pointer;
   position: absolute;
-  right: .5rem;
+  right: 0.5rem;
   top: 1.5rem;
+}
+
+/* Product Details */
+.details {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+.details-image {
+  float: 2 1 60rem;
+}
+.details-image img {
+  max-width: 60rem;
+  width: 100%;
+}
+.details-info {
+  float: 1 1 30rem;
+}
+.details-action {
+  float: 1 1 30rem;
+}
+
+.details-info ul, .details-action ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.details-info li, .details-action li {
+margin-bottom: 1rem;
+}
+
+.back-to-result{
+  padding: 1rem;
+}
+
+.details-action {
+  border: .1rem #808080 solid;
+  border-radius: 0.5rem;
+  background-color: #f8f8f8;
+  padding: 1rem;
+}
+
+.details-action ul li:last-child {
+  display: flex;
+  flex-direction: column;
+}
+.button {
+  padding: 1rem;
+  border: .1rem #808080 solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.button:hover{
+  border: .1rem #404040 solid;
+}
+
+.button.primary{
+  background-color: #f0c040;
 }
