--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,12 @@ body {
   height: 100vh;
   margin: 0;
 }
+button {
+  font-size: 1.6rem;
+}
+.full-width {
+  width: 100%;
+}
 
 #root {
   height: 100%;
@@ -167,21 +173,23 @@ a:hover {
   float: 1 1 30rem;
 }
 
-.details-info ul, .details-action ul {
+.details-info ul,
+.details-action ul {
   list-style-type: none;
   padding: 0;
 }
 
-.details-info li, .details-action li {
-margin-bottom: 1rem;
+.details-info li,
+.details-action li {
+  margin-bottom: 1rem;
 }
 
-.back-to-result{
+.back-to-result {
   padding: 1rem;
 }
 
 .details-action {
-  border: .1rem #808080 solid;
+  border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   background-color: #f8f8f8;
   padding: 1rem;
@@ -193,15 +201,74 @@ margin-bottom: 1rem;
 }
 .button {
   padding: 1rem;
-  border: .1rem #808080 solid;
+  border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   cursor: pointer;
 }
 
-.button:hover{
-  border: .1rem #404040 solid;
+.button:hover {
+  border: 0.1rem #404040 solid;
 }
 
-.button.primary{
+.button.primary {
   background-color: #f0c040;
+}
+
+/* Cart */
+
+.cart {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem;
+  align-items: flex-start;
+}
+
+.cart-list {
+  flex: 3 1 60rem;
+}
+
+.cart-action {
+  flex: 1 1 20rem;
+  background-color: #f0f0f0;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.cart-list-container {
+  padding: 0;
+  list-style-type: none;
+  padding: 1rem;
+}
+
+.cart-list-container li {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 1rem;
+  border-bottom: 0.1rem #808080 solid;
+}
+
+.cart-list-container li img {
+  max-width: 10rem;
+  max-height: 10rem;
+}
+
+.cart-list-container li:first-child {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.cart-image {
+  flex: 1 1;
+}
+
+.cart-name {
+  flex: 8 1;
+}
+
+.cart-price {
+  flex: 1 1;
+  font-size: 2.5rem;
+  text-align: right;
 }
